the final fixes for generate swagger doc
